# managershow

./: .env.example  .gitignore  CHANGELOG.md  GUIA_REFERENCIA.md  GUIA_TECNICO.md  README.md  ROADMAP.md  alembic.ini  openapi.json  pyproject.toml  requirements.txt  run_audit.bat  start.bat  test_api.py  test_import.py  test_loop.bat  test_start.bat
alembic/: env.py
alembic/versions/: 166716aa8cad_fase_15_dynamism.py  1ddf4abb3e05_add_crm_models_and_sellers.py  2d327a0323ba_create_document_templates_table.py  30bf62668b0c_fase_26_ciclo_empenho_comprovacao.py  323c2aa8f611_expand_tenant_fields.py  4456e0ffe21d_add_leads_tickets_ticket_replies.py  527d7823a2c6_feat_visibility_matrix_level_3.py  7684d2a8db28_feat_logistics_smart_fase_27.py  87fbaf251c4b_create_saas_payment_logs_table.py  c13cd8d9de5d_add_onboarded_to_tenant.py  c3ca71e494ff_fase_16_is_auto_generated.py  c594c1b01406_create_system_settings_table.py  cf941776a270_create_show_crews_table.py  db9c308341ec_feat_bi_previsional_fase_25.py  dbe51a169fbc_refactor_saaslead_and_remove_plan.py  e159a83d902c_add_saas_catalog_and_tenant_limits.py  ed28defc531a_add_address_fragment_fields_to_tenant.py  ee10edbdd580_update_tenant_plan_fk_to_bundles.py  (+1 more)
app/: __init__.py  celery_app.py  config.py  database.py  exceptions.py  main.py  redis.py
frontend/: .eslintcache  lint_output.txt  package-lock.json  package.json  tsconfig.json
mobile/: package-lock.json  package.json
scripts/: __init__.py  audit_ms.py  check_db.py  diag_independent.py  diagnostic_db.py  rename_agency.py  seed.py  seed_vima_admin.py
(+229 files in other folders)
